# ian_games_workspace

./: .gitignore  Cargo.toml  README.md
game/: Cargo.toml
game/src/: asset_loader.rs  main.rs  setup.rs  states.rs  util.rs
game/src/app_game/: collision.rs  invisible.rs  mod.rs  spaceship.rs
game/src/app_loading/: asset_loader.rs  mod.rs  setup.rs
game/src/app_menu/: main_menu.rs  mod.rs
game/src/components/: bullet.rs  collisable.rs  explosion.rs  health.rs  invisible.rs  mod.rs  player.rs  spaceship.rs  ufo.rs  velocity.rs
game/src/constant/: mod.rs  size.rs  z_index.rs  z_index_map.rs
game/src/flow/: main_menu.rs  mod.rs
game/src/flow/app_game/: bullet.rs  cleanup.rs  mod.rs  ready.rs  result.rs  score.rs  ufo.rs
game/src/flow/app_game/in_game/: mod.rs  (+1 more)
game/src/flow/app_loading/: setup.rs
game/src/flow/app_menu/: main_menu.rs
game/src/flow/game/: ready.rs  result.rs
game/src/flow/loading/: setup.rs
game/src/flow/main_menu/: menu.rs  mod.rs
game/src/flow/online_game/: error_page.rs  matching.rs  mod.rs  ready.rs  result.rs
game/src/flow/shared/: control.rs  mod.rs  shooting.rs  stars.rs
game/src/flow/shared_system/: cleanup.rs  mod.rs  stars.rs
game/src/game/: bullet.rs  explosion.rs  health.rs  invisible.rs  score.rs  spaceship.rs  ufo.rs
game/src/game_component/: explosion.rs  health.rs  mod.rs  player.rs  score.rs  spaceship.rs  ufo.rs
game/src/game_events/: mod.rs
game/src/game_events/trigger/: add_score.rs  health_reduce.rs  mod.rs  remove_ufo.rs  spaceship_movement.rs
game/src/res/: control_option.rs  mod.rs  player_tag.rs
game/src/shared_state_system/: mod.rs  stars.rs
game/src/ui/: background.rs  main_menu.rs  mod.rs  result.rs  size.rs
game/src/ui_component/: blink.rs  control_button.rs  interaction_ui.rs  main_container.rs  main_menu.rs  mod.rs  result.rs  velocity.rs
game/src/ui_components/: blink.rs  control_button_panel.rs  interaction_ui.rs  main_container.rs  selectable_text.rs
game/src/util/: mod.rs  velocity.rs
shared/: Cargo.toml
shared/src/: client_message.rs  game_related.rs  lib.rs  server_message.rs  util.rs
(+205 files in other folders)
