[package]
name = "shooting_game"
version = "0.1.0"
edition = "2021"

[lib]
name = "shooting_game_lib"
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
bevy = "0.14.2"
bevy_embedded_assets = "0.11.0"
rand = "0.8.5"
wasm-bindgen = "0.2.95"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
