[package]
name = "shooting_game_shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shooting_game_shared"
path = "src/lib.rs"

[dependencies]
bevy_math = "0.15.2"
bevy_eventwork = "0.10.0"
rocket_ws = "0.1.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }