[package]
name = "shooting_game_shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shooting_game_shared"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

bevy.workspace = true
tungstenite.workspace = true

rocket_ws.workspace = true